--- a/foodadmin/src/app/globals.css
+++ b/foodadmin/src/app/globals.css
@@ -26,3 +26,12 @@
     background-color: #5b5858; /* Color of the scrollbar thumb */
     border-radius: 4px; /* Rounded corners */
 }
+
+
+.szh-menu {
+
+ 
+  border-radius: 0rem !important;
+  box-shadow: 0 0px 0px rgba(0, 0, 0, 0.133), 0 1px 2px rgba(0, 0, 0, 0.1) !important;
+}
+
