--- a/foodadmin/src/app/globals.css
+++ b/foodadmin/src/app/globals.css
@@ -2,16 +2,9 @@
   --lightprimary: #35a4fb;
 }
 
-.container,
-.container-fluid,
-.container-lg,
-.container-md,
-.container-sm,
-.container-xl,
-.container-xxl {
+/* .container-fluid{
   --bs-gutter-x: 0rem !important;
-}
-
+} */
 
 /* CSS for changing scrollbar color */
 .sidebar::-webkit-scrollbar {
@@ -27,11 +20,33 @@
     border-radius: 4px; /* Rounded corners */
 }
 
-
 .szh-menu {
-
- 
   border-radius: 0rem !important;
   box-shadow: 0 0px 0px rgba(0, 0, 0, 0.133), 0 1px 2px rgba(0, 0, 0, 0.1) !important;
 }
 
+.btn {
+  border-radius: 2px !important;
+}
+
+.dropdown-menu { 
+  border-radius: 2px !important;
+}
+
+.form-control {
+  border: 1px solid var(--bs-border-color) !important;
+  border-radius: 0px !important;
+}
+
+.form-control:focus {
+  border-color: var(--bs-primary) !important;
+  box-shadow: 0 0 0px rgb(4, 5, 44) !important;
+}
+
+.form-check-input[type=checkbox] {
+  border-radius: 0em !important;
+}
+
+.form-check-input:focus {
+  box-shadow: 0 0 0 0rem rgba(13,110,253,.25) !important;
+}
