--- a/foodadmin/src/app/globals.css
+++ b/foodadmin/src/app/globals.css
@@ -26,7 +26,7 @@
 }
 
 .btn {
-  border-radius: 2px !important;
+  border-radius: 0px !important;
 }
 
 .dropdown-menu { 
@@ -49,4 +49,8 @@
 
 .form-check-input:focus {
   box-shadow: 0 0 0 0rem rgba(13,110,253,.25) !important;
+}
+
+.ant-table-thead .ant-table-cell {
+  background-color: rgb(241, 241, 241) !important;
 }
