--- a/foodadmin/src/app/globals.css
+++ b/foodadmin/src/app/globals.css
@@ -8,29 +8,28 @@
 
 /* CSS for changing scrollbar color */
 .sidebar::-webkit-scrollbar {
-    width: 8px; /* Width of the scrollbar */
+  width: 4px; /* Width of the scrollbar */
 }
 
 .sidebar::-webkit-scrollbar-track {
-    background: rgba(0, 0, 0, 0); /* Transparent background */
+  background: rgba(0, 0, 0, 0) !important; /* Transparent background */
 }
 
 .sidebar::-webkit-scrollbar-thumb {
-    background-color: #5b5858; /* Color of the scrollbar thumb */
-    border-radius: 4px; /* Rounded corners */
+  background-color: #1777ff !important; /* Color of the scrollbar thumb */
+  border-radius: 0px !important; /* Rounded corners */
 }
 
-.szh-menu {
-  border-radius: 0rem !important;
-  box-shadow: 0 0px 0px rgba(0, 0, 0, 0.133), 0 1px 2px rgba(0, 0, 0, 0.1) !important;
-}
+/* .ant-table-thead .ant-table-cell {
+  background-color: rgb(241, 241, 241) !important;
+} */
 
 .btn {
   border-radius: 0px !important;
 }
 
 .dropdown-menu { 
-  border-radius: 2px !important;
+  border-radius: 0px !important;
 }
 
 .form-control {
@@ -49,8 +48,4 @@
 
 .form-check-input:focus {
   box-shadow: 0 0 0 0rem rgba(13,110,253,.25) !important;
-}
-
-.ant-table-thead .ant-table-cell {
-  background-color: rgb(241, 241, 241) !important;
 }
